--- a/src/pages/task/styles.module.css
+++ b/src/pages/task/styles.module.css
@@ -52,3 +52,38 @@
   font-size: 18px;
   cursor: pointer;
 }
+
+.button:disabled {
+  cursor: not-allowed;
+  background-color: lch(37.54% 11.86 261.6);
+}
+
+.comment {
+  border: 1px solid #ddd;
+  padding: 14px;
+  border-radius: 6px;
+  margin-bottom: 14px;
+}
+
+.headComment {
+  display: flex;
+  align-items: center;
+}
+
+.commentsLabel {
+  background-color: #ccc;
+  padding: 4px 8 px;
+  margin-right: 8 px;
+  border-radius: 6px;
+}
+
+.buttonTrash {
+  border: 0;
+  background: transparent;
+  cursor: pointer;
+}
+
+.comment p {
+  margin-top: 14px;
+  white-space: pre-wrap;
+}
